# GaffersGuide-to-a-good-game

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  .graphifyignore  AGENTS.md  ARCHITECTURE_RESTRUCTURING_PLAN.md  DETECTION_EVALUATION.md  Development_Protocol.md  Frontend_Summary.html  GAFFERS_GUIDE_MIGRATION_MAP.md  Project_Vision.md  README (1).md  README.md  REPORT.md  SAHI_OPTIMIZATION_PLAN.md  SAHI_ROLLOUT_RUNBOOK.md  Start_Gaffers_Guide.command  TEAM_HANDOFF.md  TPI_Ablation_README.md  app.py  batch_model.py  check_pkl.py  cleaned_app.py  desktop.ini  docker-compose.yml  dockerfile  fix_environment.sh  inspect_frame.py  liltester.py  model1_multi_matches.py  modularity_blueprint.md  package-lock.backup.json  package-lock.json  plan.md  pyproject.toml  render.yaml  requirements.txt  run_coords_batch.sh  (+13 more)
.github/: pull_request_template.md
.github/workflows/: branch_guardrails.yml  build_wheels.yml  deploy-frontend.yml  deploy.yml  quality_gate.yml.
backend/: .env.example  COLAB_SETUP.md  Dockerfile  FRESH_START_GUIDE.md  llm_service.py  main.py  models.py  requirements.txt  run_verification_job.py  scratch.py
backend/benchmarks/: __init__.py  cli.py  collectors.py  models.py  profiler.py  regression.py
backend/calculators/: __init__.py  advanced_ball_metrics.py  ball_visibility.py  possession.py
backend/calibration/: __init__.py  ports.py  soccer_pitch_adapter.py
backend/core/: __init__.py  interfaces.py
backend/data/: tactical_library.json  zsl_tactics.json  zsl_tactics_VariantA.json  zsl_tactics_VariantB.json  zsl_tactics_VariantC.json
backend/event_layer/: __init__.py  chat_evidence.py  enricher.py  models.py  ontology.py  pipeline.py  retrieval.py  threat.py
backend/notebooks/: finetune_reference.ipynb  train_colab.ipynb
backend/references/: calibrate  calibrate.cpp  process_batch.py
backend/routers/: __init__.py  fixtures.py
backend/scripts/: __init__.py  advanced_pitch_calibration.py  analytics_filter.py  check_pipeline_prerequisites.py  cloud_batch_processor 2.py  cloud_batch_processor.py  download_eda_matches.py  (+31 more)
desktop-app/: README.md  implementation_plan.md  package-lock.json  package.json
dist_release_2.0.3/: gaffers_guide-2.0.3-cp311-cp311-macosx_26_0_arm64.whl  gaffers_guide-2.0.3-cp311-cp311-win_amd64.whl
dist_windows/: gaffers_guide-2.0.2-cp311-cp311-win_amd64.whl
docs/: BUILDING_RUST_CORE.md  BUILDING_WINDOWS_WHEELS.md  beta_api_contracts.md  beta_baseline_runbook.md  beta_llm_policy.md  beta_pipeline_architecture.md  beta_slo_and_rollout.md  coaching_evaluation.md  desktop_integration_runbook.md  external_references.md  player_reports_data_inventory.md  ppt_content.md  related_work_rewrite.md  tbe_tpi_rewrite.md
frontend/: Dockerfile  app.js  index.html  package-lock.json  package.json  vite.config.ts
frontend_final/: Dockerfile  README.md  package-lock.json  package.json
gaffers-experiment-repo/: .env.runpod.example  .gitignore  README.md
graphify-out/: .graphify_ast.json  .graphify_cached.json  .graphify_detect.json  .graphify_labels.json  .graphify_manifest.json  GRAPH_REPORT.md  benchmark.json  cost.json  graph.html  graph.json  manifest.json  restructuring_readiness.json
infra/: README.md  cloudbuild.beta.yaml  cloudbuild.yaml  nginx.conf
model2_output_team/: combined_summary.json
models/: __init__.py  model0_load_data.py  model1.py  model2.py  model3.py
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: lib.rs
scripts/: audit_windows_wheels.py  build_windows_wheels.bat  run_integration_desktop.sh
templates/: base.html  home.html  index.html  match_detail.html  matches.html  results_model1.html  results_model2.html  results_model3.html
tests/: __init__.py  test_api.py  test_cli.py  test_imports.py  test_profiles.py
(+3731 files in other folders)
