[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaffers-guide"
version = "0.1.0"
description = "Tactical intelligence and computer vision pipeline for football analytics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "opencv-python>=4.10.0,<4.12.0",
    "supervision>=0.22.0",
    "ultralytics>=8.0.0",
    "torch>=2.2.0,<2.6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "openai>=1.55.0",
    "google-generativeai>=0.8.0",
    "huggingface_hub>=0.24.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
    "sahi>=0.11.20",
]

[project.scripts]
gaffers-guide = "gaffers_guide.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# The "Style Enforcer"
# This tells the AI: "Our max line length is 88 chars. Use double quotes."
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E = Errors, F = Pyflakes (Logic), I = Imports (Sorting)
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
# The "Tester"
# This tells pytest where to find tests and how to run them.
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"