[build-system]
requires = ["setuptools>=69", "wheel", "cython>=3.0", "numpy>=1.26.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaffers-guide"
version = "2.0.3"
description = "Tactical intelligence and computer vision pipeline for football analytics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "opencv-python>=4.10.0,<4.12.0",
    "supervision>=0.22.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "openai>=1.55.0",
    "google-generativeai>=0.8.0",
    "huggingface_hub>=0.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
gaffers-guide = "gaffers_guide.cli:main"

[project.optional-dependencies]
vision = [
    "torch>=2.0.0",
    "ultralytics>=8.0.0",
    "sahi>=0.11.0",
]
spatial = []
tactical = [
    "scikit-learn>=1.3.0",
]
io = []
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "cython>=3.0",
    "build>=1.2.0",
]
compile = [
    "cython>=3.0",
    "build>=1.2.0",
]
full = ["gaffers-guide[vision,tactical,dev]"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# The "Style Enforcer"
# This tells the AI: "Our max line length is 88 chars. Use double quotes."
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E = Errors, F = Pyflakes (Logic), I = Imports (Sorting)
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
# The "Tester"
# This tells pytest where to find tests and how to run them.
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"